tmp/yaml/247test/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  labels:
    app: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: xownsolutions/247travels.com
          ports:
            - containerPort: 3000
    
---

apiVersion: v1 
kind: Service
metadata:
  name: frontend-svc
  labels:
    app: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: frontend-app
  ports:
    - port: 80
      targetPort: 3000
      name: frontend-svc
