tmp/yaml/247test/ng.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ng-app
  labels:
    app: ng-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ng-app
  template:
    metadata:
      labels:
        app: ng-app
    spec:
      containers:
        - name: ng-app
          image: xownsolutions/ng.api.247travels.com
          ports:
            - containerPort: 5050
---

apiVersion: v1 
kind: Service
metadata:
  name: ng-svc
  labels:
    app: ng-svc
spec:
  type: ClusterIP
  selector:
    app: ng-app
  ports:
    - port: 8080
      targetPort: 5050
      name: ng-svc
