tmp/yaml/247test/vt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vt-app
  labels:
    app: vt-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vt-app
  template:
    metadata:
      labels:
        app: vt-app
    spec:
      containers:
        - name: vt-app
          image: xownsolutions/vt.api.247travels.com
          ports:
            - containerPort: 8030
---

apiVersion: v1 
kind: Service
metadata:
  name: vt-svc
  labels:
    app: vt-svc
spec:
  type: ClusterIP
  selector:
    app: vt-app
  ports:
    - port: 5050
      targetPort: 8030
      name: vt-svc
