tmp/yaml/247test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
   # nginx.ingress.kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod  # Use the ClusterIssuer defined earlier
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.247travels.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
    - host: k8s.ng.247travels.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ng-svc  # Replace with the name of your API service
                port:
                  number: 8080
    - host: k8s.vt.247travels.com 
      http:
        paths:
         -  path: /
            pathType: Prefix
            backend: 
              service:
                name: vt-svc
                port:
                  number: 5050
              
            
  tls:
    - hosts:
        - k8s.ng.247travels.com
        - k8s.vt.247travels.com
        - k8s.247travels.com
      secretName: cert-secret
